#cargo-features = ["edition2024"]
[package]
name = "pinocchio-flashloan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
hex = { version = "0.4.3", default-features = false }
pinocchio = "0.10.2"
pinocchio-associated-token-account = "0.3.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-token-2022 = "0.2.0"
#pyth-solana-receiver-sdk = "1.1.0"
shank = "0.4.8"
thiserror = { version = "2.0.18", default-features = false }
